tests/fixtures/invalid/pow_int_int_bytes.py
# Cannot call pow() with Int, Int, Bytes
x = pow(1, 1, b"hello")
